# zmk-pmw3610-driver-sayu

./: CMakeLists.txt  Kconfig
dts/bindings/: pixart,pmw3610.yml
src/: pmw3610.c
